--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -68,6 +68,11 @@ body {
   .container {
     max-width: 730px;
   }
+  
+@media screen and (min-width: 1240px) {
+  .container {
+    max-width: 1200px;
+  }
 
   /* Remove the padding we set earlier */
   .header,
