--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -68,7 +68,7 @@ body {
   .container {
     max-width: 730px;
   }
-  
+}
 @media screen and (min-width: 1240px) {
   .container {
     max-width: 1200px;
